--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,30 +1,39 @@
-.nav {
+.navbar {                        
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 1rem 2rem;
+    padding: 0rem 2rem;
     border-bottom: 1px solid #f30c0c;
-}
-
-.logo {
+  }
+  
+  .logo {
     font-size: 1.25rem;
     font-weight: 600;
-}
+    cursor: pointer;
+  }
 
-.nav-list{
+  .logo:hover{
+    opacity: 0.75;
+  }
+  
+  .navbar nav {
+    margin-left: auto;
+  }
+
+
+  .nav-list {
     display: flex;
     list-style: none;
     gap: 1.5rem;
     margin: 0;
-    padding: 0;
-}
-
-.nav-list li{
+    margin-right: auto;
+  }
+  
+  .nav-list li {
     cursor: pointer;
     font-weight: 500;
     transition: opacity 0.2s ease;
-}
-
-nav-list li:hover {
+  }
+  
+  .nav-list li:hover {             
     opacity: 0.75;
-}
+  }
