--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,39 +1,43 @@
 .navbar {                        
+    background: var(--bg-outer);   
+    color: var(--fg-primary);
     display: flex;
     align-items: center;
-    padding: 0rem 2rem;
-    border-bottom: 1px solid #f30c0c;
-  }
+    padding: var(--space-s) var(--space-m);
+    border-bottom: 1px solid var(--bg-hover);
+}
   
-  .logo {
+.logo {
     font-size: 1.25rem;
     font-weight: 600;
     cursor: pointer;
-  }
+    user-select: none;
+    transition: opacity 0.2s ease;
+}
 
-  .logo:hover{
+.logo:hover{
     opacity: 0.75;
-  }
+}
   
-  .navbar nav {
+.navbar nav {
     margin-left: auto;
-  }
+}
 
 
-  .nav-list {
+.nav-list {
     display: flex;
     list-style: none;
     gap: 1.5rem;
     margin: 0;
     margin-right: auto;
-  }
+}
   
-  .nav-list li {
+.nav-list li {
     cursor: pointer;
     font-weight: 500;
     transition: opacity 0.2s ease;
-  }
+}
   
-  .nav-list li:hover {             
+.nav-list li:hover {             
     opacity: 0.75;
-  }
+}
